--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="fi.antonina.pilldiary">
 
     <application
@@ -22,6 +23,9 @@
             android:name=".CalendarActivity"
             android:exported="false" />
         <activity
+            android:name=".RemiderActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -30,6 +34,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name="AlarmReceiver" android:exported="false"
+            tools:ignore="Instantiatable" />
     </application>
-
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
